--- a/src/OC/PlatformBundle/Resources/views/Advert/index.html.twig
+++ b/src/OC/PlatformBundle/Resources/views/Advert/index.html.twig
@@ -14,5 +14,7 @@
       réussi à exécuter le programme pour accomplir une tâche simple :
       afficher ce hello world !
     </p>
+    
+    <h2>Page: {{ page }}</h2>
   </body>
 </html>
