--- a/src/OC/PlatformBundle/Resources/views/Advert/view.html.twig
+++ b/src/OC/PlatformBundle/Resources/views/Advert/view.html.twig
@@ -1,16 +1,33 @@
-{# src/OC/PlatformBundle/Resources/views/Advert/view.html.twig #}
+{# src/OC/PlatformBundle/Resources/view/Advert/view.html.twig #}
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>page view</title>
-  </head>
-  <body>
-    <p>
-      <h1>Page Advert - view</h1>
-    </p>
-    <h2>id: {{ id }}</h2>
-    <h2>tag: {{ tag }}</h2>
-    <h2>name: {{ name }}</h2>
-  </body>
-</html>
+{% extends "OCPlatformBundle::layout.html.twig" %}
+
+{% block title %}
+  Lecture d'une annonce - {{ parent() }}
+{% endblock %}
+
+{% block ocplatform_body %}
+
+  <h2>{{ advert.title }}</h2>
+  <i>Par {{ advert.author }}, le {{ advert.date|date('d/m/Y') }}</i>
+
+  <div class="well">
+    {{ advert.content }}
+  </div>
+
+  <p>
+    <a href="{{ path('oc_platform_home') }}" class="btn btn-default">
+      <i class="glyphicon glyphicon-chevron-left"></i>
+      Retour à la liste
+    </a>
+    <a href="{{ path('oc_platform_edit', {'id': advert.id}) }}" class="btn btn-default">
+      <i class="glyphicon glyphicon-edit"></i>
+      Modifier l'annonce
+    </a>
+    <a href="{{ path('oc_platform_delete', {'id': advert.id}) }}" class="btn btn-danger">
+      <i class="glyphicon glyphicon-trash"></i>
+      Supprimer l'annonce
+    </a>
+  </p>
+
+{% endblock %}
