pré generate entity

--- a/src/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/CoreBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,9 @@
-Hello World!
+<html>
+  <head>
+    <title>page CoreBundle - index.html.twig</title>
+  </head>
+  
+  <body>
+    <p> Hello CoreBundle - index</p>
+  </body>
+  
